"ChangeLog"

2005-01-15	David Fang	<fangism@users.sourceforge.net>

	* Added macros for convenient default use of list_vector_pool, 
	  in-class static member declarations and definitions.  

	* Added memory leak diagnostics to list_vector_pool:
	  basically size of free-list should be equal to peak usage, 
	  else there's a dangling pointer to an element in an allocated
	  region.  This is non-fatal (as long as the memory is not touched)
	  because deallocate() uses lazy destruction, i.e. only destroys
	  upon allocation off of the free-list.  

	* Fixed premature memory deallocation of assignment and 
	  connection objects in context::add_assignment and ::add_connection, 
	  in "art_context.cc".

	* Updated src/util/test/test-expect.sh:
	  uses test/address_filter.sed to filter out addresses which will
	  vary on every system.  

	* PROBLEM (solved): 
	  Upon exit(1) of program, sometimes memory leak is diagnosed.  
	  check reports unaccounted token_char's (among other types)
	  for *some* tests, whereas check doesn't find any problems.  
	  May have to do with destructor behavior upon exit.  
	  IDEA: may need to replace exit() with throw() to ensure
	  proper stack cleanup.  

	* SOLUTION (to the above PROBLEM):
	  Problem was indeed in premature exit(), which doesn't clean up
	  the call-stack objects, and jumps straight to the end of main().
	  Exception unwinding, on the other hand, guarantees proper
	  stack clean-up.  Thus we catch a general exception at main()
	  to delay exit/returning from main until stack objects are 
	  properly destroyed.  
	  I've globally replaced exit(1) with throw std::exception()
	  to accomplish simple, yet safe, termination.  
	  In "macros.h", THROW_EXIT means "throw generic exception
	  with intention of exit(1)-ing."

	* Fixed yet another problem with pointer-classes.
	  There was an implicit conversion from never_ptr to excl_ptr
	  through excl_ptr_ref, which should not have existed, 