@@ -1,7 +1,7 @@
 # "configure.in"
 # Process this file with "autoconf" to generate the "configure" script.
 #
-#	$Id: configure.in,v 1.10 2005/01/13 07:22:47 fang Exp $
+#	$Id: configure.in,v 1.11 2005/01/16 21:47:07 fang Exp $
 
 # Hint: Try running "autoscan" for suggestions on what should go in here.  
 # Results of autoscan appear in "configure.scan".  
@@ -42,7 +42,7 @@ AM_PROG_CC_C_O
 AC_ISC_POSIX
 
 # additional header checks
-AC_CHECK_HEADERS([stddef.h])
+AC_CHECK_HEADERS([stddef.h stdlib.h string.h unistd.h])
 
 # compiler characteristic checks
 AC_HEADER_STDBOOL
@@ -50,10 +50,13 @@ AC_C_CONST
 AC_C_INLINE
 AC_C_RESTRICT
 AC_TYPE_SIZE_T
-
+AC_C_VOLATILE
+AC_CHECK_TYPES([ptrdiff_t])
 
 # library functions
 AC_FUNC_ERROR_AT_LINE
+AC_FUNC_MALLOC
+AC_FUNC_REALLOC
 
 # Lex/Yacc support
 AM_PROG_LEX
@@ -62,9 +65,10 @@ AC_PROG_YACC
 # Miscellaneous
 AC_PROG_LN_S
 
-echo -n "checking for fang's sanity... "
-sleep 3
-echo "no"
+# not so funny...
+echo -n "checking for fang's sanity"
+sleep 1; echo -n "."; sleep 1; echo -n "."; sleep 1; echo -n "."
+sleep 1; echo " no"
 
 AM_CONDITIONAL(HAVE_BISON, echo "$YACC" | grep -q bison)
 
